Update exodus url

--- a/packages/seacas/doc-source/exo_utils/introduction.tex
+++ b/packages/seacas/doc-source/exo_utils/introduction.tex
@@ -75,7 +75,7 @@ analysis model at different times throughout the analysis event, then
 
 \section{\exo{} Concepts}
 The \exo{} database documentation can be accessed at
-\url{http://jal.sandia.gov/SEACAS/Documentation/exodusII-new.pdf} or \url{http://sourceforge.net/projects/exodusii/files/Documentation/Documentation/exodusII-4.pdf}. It
+\url{http://gsjaardema.github.io/seacas/exodusII-new.pdf}. It
 contains a full detailed description of \exo{}. This section presents
 an overview of the concepts and structure of an \exo{} database to give some
 details which will be referred to in subsequent chapters. An \exo{}
