--- a/packages/seacas/doc-source/exodus/01-Introduction.tex
+++ b/packages/seacas/doc-source/exodus/01-Introduction.tex
@@ -26,7 +26,7 @@ data interrogation, and analysis tracking.
 The \exo{} library is licensed under the BSD open source license.
 
 \begin{quote}
-Copyright~\copyright{} 2005 National Technology & Engineering Solutions
+Copyright~\copyright{} 2005--2017 National Technology \& Engineering Solutions
 of Sandia, LLC (NTESS).  Under the terms of Contract DE-NA0003525 with
 NTESS, the U.S. Government retains certain rights in this software.
 
